--- a/frontend/app/views/digital_objects/_sidebar.html.erb
+++ b/frontend/app/views/digital_objects/_sidebar.html.erb
@@ -15,6 +15,10 @@
       <li><a href="#digital_object_linked_agents_"><%= I18n.t("linked_agent._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
+    <% if controller.action_name === "show" && @digital_object.linked_instances.length > 0 %>
+      <li><a href="#digital_object_linked_instances"><%= I18n.t("linked_record._html.plural") %> <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if controller.action_name != "show" || @digital_object.subjects.length > 0 %>
       <li><a href="#digital_object_subjects_"><%= I18n.t("subject._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
