--- a/frontend/app/views/enumerations/index.html.erb
+++ b/frontend/app/views/enumerations/index.html.erb
@@ -11,7 +11,7 @@
           <div class="control-group required">
             <label class="control-label" for="enum_selector"><%= I18n.t("enumeration._html.messages.name_selector") %></label>
             <div class="controls">
-              <%= select_tag "enum_selector", options_for_select([""].concat(@enumerations.collect{|e| [e["name"], JSONModel(:enumeration).id_for(e["uri"])]}), params[:id]), :style => "width: auto; max-with: 100%;" %>
+              <%= select_tag "enum_selector", options_for_select([""].concat(@enumerations.sort{|a,b| a["name"] <=> b["name"]}.collect{|e| [e["name"], JSONModel(:enumeration).id_for(e["uri"])]}), params[:id]), :style => "width: auto; max-with: 100%;" %>
             </div>
           </div>
         </fieldset>
