--- a/frontend/app/views/accessions/_toolbar.html.erb
+++ b/frontend/app/views/accessions/_toolbar.html.erb
@@ -57,43 +57,43 @@
                 <% if @accession.suppressed %>
                   <div class="btn btn-small btn-inline-form">
                     <%= link_to I18n.t("actions.unsuppress"),
-                                  {:controller => :accessions, :action => :unsuppress, :id => @accession.id, :format => :json},
+                                  {:controller => :accessions, :action => :unsuppress, :id => @accession.id},
                                   :method => :post,
                                   :class => "btn btn-small unsuppress-record",
-                                  :"data-data-type" => "json",
                                   :"data-confirmation" => true,
                                   :"data-title" => I18n.t("actions.unsuppress_confirm_title"),
                                   :"data-message" => I18n.t("actions.unsuppress_confirm_message"),
-                                  :"data-confirm-btn-label" => "#{I18n.t("actions.unsuppress")}"
+                                  :"data-confirm-btn-label" => "#{I18n.t("actions.unsuppress")}",
+                                  :"data-authenticity_token" => form_authenticity_token
                     %>
                   </div>
                 <% else %>
                   <div class="btn btn-inline-form">
                     <%= link_to I18n.t("actions.suppress"),
-                                {:controller => :accessions, :action => :suppress, :id => @accession.id, :format => :json},
+                                {:controller => :accessions, :action => :suppress, :id => @accession.id},
                                 :method => :post,
                                 :class => "btn btn-small btn-warning suppress-record",
-                                :"data-data-type" => "json",
                                 :"data-confirmation" => true,
                                 :"data-title" => I18n.t("actions.suppress_confirm_title"),
                                 :"data-message" => I18n.t("actions.suppress_confirm_message"),
                                 :"data-confirm-btn-label" => "#{I18n.t("actions.suppress")}",
-                                :"data-confirm-btn-class" => "btn-warning" %>
+                                :"data-confirm-btn-class" => "btn-warning",
+                                :"data-authenticity_token" => form_authenticity_token %>
                   </div>
                 <% end %>
               <% end %>
               <% if user_can?('delete_archival_record') %>
                 <div class="btn btn-inline-form">
                   <%= link_to I18n.t("actions.delete"),
-                              {:controller => :accessions, :action => :delete, :id => @accession.id, :format => :json},
+                              {:controller => :accessions, :action => :delete, :id => @accession.id},
                               :method => :post,
                               :class => "btn btn-small btn-danger delete-record",
-                              :"data-data-type" => "json",
                               :"data-confirmation" => true,
                               :"data-title" => I18n.t("actions.delete_confirm_title"),
                               :"data-message" => I18n.t("actions.delete_confirm_message"),
                               :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}",
-                              :"data-confirm-btn-class" => "btn-danger" %>
+                              :"data-confirm-btn-class" => "btn-danger",
+                              :"data-authenticity_token" => form_authenticity_token %>
                 </div>
               <% end %>
             </div>
