--- a/frontend/app/views/subjects/_toolbar.html.erb
+++ b/frontend/app/views/subjects/_toolbar.html.erb
@@ -9,7 +9,16 @@
         </div>
         <div class="btn-group pull-right">
           <div class="btn btn-inline-form">
-            <%= button_to I18n.t("actions.delete"), {:controller => :subjects, :action => :delete, :id => @subject.id}, :method => :post, :class => "btn btn-small btn-danger delete-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
+            <%= link_to I18n.t("actions.delete"),
+                        {:controller => :subjects, :action => :delete, :id => @subject.id},
+                        :method => :post,
+                        :class => "btn btn-small btn-danger delete-record",
+                        :"data-confirmation" => true,
+                        :"data-title" => I18n.t("actions.delete_confirm_title"),
+                        :"data-message" => I18n.t("actions.delete_confirm_message"),
+                        :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}",
+                        :"data-confirm-btn-class" => "btn-danger",
+                        :"data-authenticity_token" => form_authenticity_token %>
           </div>
         </div>
 
