--- a/frontend/app/views/users/edit.html.erb
+++ b/frontend/app/views/users/edit.html.erb
@@ -1,10 +1,11 @@
 <%= setup_context :object => @user %>
 
-<div class="row-fluid">
-   <div class="span12">
-     <div class="record-pane">
-     <h2><%= I18n.t("user._frontend.section.edit_account") %></h2>
-     <%= form_for @user, :as => "createuser", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
+<%= form_for @user, :as => "createuser", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
+  <div class="row-fluid">
+     <div class="span12">
+       <%= render :partial => "toolbar" %>
+       <div class="record-pane">
+       <h2><%= I18n.t("user._frontend.section.edit_account") %></h2>
        <%= form_context :user, @user do |form| %>
          <%= render :partial => "users/form", :locals => {:form => form} %>
 
@@ -13,7 +14,7 @@
            <%= link_to I18n.t("actions.cancel"), {:controller => :welcome}, :class => "btn btn-cancel" %>
          </div>
        <% end %>
-     <% end %>
+       </div>
      </div>
-   </div>
-</div>
+  </div>
+<% end %>
