--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -5,52 +5,52 @@
   <div class="span9">
     <%= render :partial => "toolbar" %>
     <div class="record-pane">
-      <%= readonly_context :digital_object, @digital_object do |readonly| %>
-        <h2><%= @digital_object.title %> <span class="label label-info"><%= I18n.t("digital_object._singular") %></span></h2>
+      <% define_template "digital_object", jsonmodel_definition(:digital_object) do |form, digital_object| %>
+        <h2><%= digital_object.title %> <span class="label label-info"><%= I18n.t("digital_object._singular") %></span></h2>
         <section id="basic_information">
           <h3><%= I18n.t("digital_object._frontend.section.basic_information") %></h3>
   
-          <%= readonly.label_and_textarea "title" %>
-          <%= readonly.label_and_textfield "digital_object_id" %>
-          <%= readonly.label_and_boolean "publish" %>
-          <%= readonly.label_and_select "level", readonly.possible_options_for("level") %>
-          <%= readonly.label_and_select "digital_object_type", readonly.possible_options_for("digital_object_type") %>
-          <%= readonly.label_and_select "language", readonly.possible_options_for("language") %>
-          <%= readonly.label_and_boolean "restrictions" %>
-          <%= display_audit_info(@digital_object) %>
+          <%= form.label_and_textarea "title" %>
+          <%= form.label_and_textfield "digital_object_id" %>
+          <%= form.label_and_boolean "publish" %>
+          <%= form.label_and_select "level", form.possible_options_for("level") %>
+          <%= form.label_and_select "digital_object_type", form.possible_options_for("digital_object_type") %>
+          <%= form.label_and_select "language", form.possible_options_for("language") %>
+          <%= form.label_and_boolean "restrictions" %>
+          <%= display_audit_info(digital_object) %>
         </section>
 
-        <% if @digital_object.file_versions.length > 0 %>
-          <%= render :partial => "file_versions/show", :locals => { :file_versions => @digital_object.file_versions, :section_id => "digital_object_file_versions_" } %>
+        <% if digital_object.file_versions.length > 0 %>
+          <%= render :partial => "file_versions/show", :locals => { :file_versions => digital_object.file_versions, :section_id => "digital_object_file_versions_" } %>
         <% end %>
 
-        <% if @digital_object.dates.length > 0 %>
-          <%= render :partial => "dates/show", :locals => { :dates => @digital_object.dates, :section_id => "digital_object_dates_" } %>
+        <% if digital_object.dates.length > 0 %>
+          <%= render :partial => "dates/show", :locals => { :dates => digital_object.dates, :section_id => "digital_object_dates_" } %>
         <% end %>
 
-        <% if @digital_object.extents.length > 0 %>
-          <%= render :partial => "extents/show", :locals => { :extents => @digital_object.extents, :section_id => "digital_object_extents_" } %>
+        <% if digital_object.extents.length > 0 %>
+          <%= render :partial => "extents/show", :locals => { :extents => digital_object.extents, :section_id => "digital_object_extents_" } %>
         <% end %>
 
-        <% if @digital_object.linked_agents.length > 0 %>
-          <%= render :partial => "linked_agents/show", :locals => { :linked_agents => @digital_object.linked_agents, :section_id => "digital_object_linked_agents_" } %>
+        <% if digital_object.linked_agents.length > 0 %>
+          <%= render :partial => "linked_agents/show", :locals => { :linked_agents => digital_object.linked_agents, :section_id => "digital_object_linked_agents_" } %>
         <% end %>
 
-        <% if @digital_object.linked_instances.length > 0 %>
+        <% if digital_object.linked_instances.length > 0 %>
           <section id="digital_object_linked_instances" class="subrecord-form-dummy">
             <h3><%= I18n.t("linked_record._plural") %></h3>
             <div class="subrecord-form-container">
               <div class="subrecord-form-fields">
                 <div class="row-fluid label-and-value">
                   <div class="span3">
-                    <% if @digital_object.linked_instances.length > 1 %>
+                    <% if digital_object.linked_instances.length > 1 %>
                       <%= I18n.t("linked_record.ref_plural") %>
                     <% else %>
                       <%= I18n.t("linked_record.ref") %>
                     <% end %>
                   </div>
                   <div class="span9 token-list">
-                    <% @digital_object.linked_instances.each do | ref | %>
+                    <% digital_object.linked_instances.each do | ref | %>
                       <%= render_token :object => ref,
                                        :label => ref["_resolved"]["title"],
                                        :type => ref["_resolved"]["jsonmodel_type"],
@@ -63,30 +63,33 @@
           </section>
         <% end %>
 
-        <% if not @digital_object.subjects.blank? %>
-          <%= render :partial => "subjects/show_inline", :locals => {:subjects => @digital_object.subjects, :section_id => "digital_object_subjects_"} %>
+        <% if not digital_object.subjects.blank? %>
+          <%= render :partial => "subjects/show_inline", :locals => {:subjects => digital_object.subjects, :section_id => "digital_object_subjects_"} %>
         <% end %>
 
-        <% if @digital_object.notes.length > 0 %>
-          <%= render :partial => "notes/show", :locals => { :notes => @digital_object.notes, :context => readonly } %>
+        <% if digital_object.notes.length > 0 %>
+          <%= render :partial => "notes/show", :locals => { :notes => digital_object.notes, :context => form } %>
         <% end %>
 
-        <% if @digital_object.external_documents.length > 0 %>
-          <%= render :partial => "external_documents/show", :locals => { :external_documents => @digital_object.external_documents, :section_id => "digital_object_external_documents_"  } %>
+        <% if digital_object.external_documents.length > 0 %>
+          <%= render :partial => "external_documents/show", :locals => { :external_documents => digital_object.external_documents, :section_id => "digital_object_external_documents_"  } %>
         <% end %>
 
-        <% if @digital_object.rights_statements.length > 0 %>
-          <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @digital_object.rights_statements, :section_id => "digital_object_rights_statements_"  } %>
+        <% if digital_object.rights_statements.length > 0 %>
+          <%= render :partial => "rights_statements/show", :locals => { :rights_statements => digital_object.rights_statements, :section_id => "digital_object_rights_statements_"  } %>
         <% end %>
 
-        <% if @digital_object.collection_management %>
-          <%= render :partial => "collection_management/show", :locals => { :collection_management => @digital_object.collection_management, :section_id => "digital_object_collection_management_"  } %>
+        <% if digital_object.collection_management %>
+          <%= render :partial => "collection_management/show", :locals => { :collection_management => digital_object.collection_management, :section_id => "digital_object_collection_management_"  } %>
         <% end %>
 
-        <% if @digital_object.user_defined %>
-          <%= render :partial => "user_defined/show", :locals => { :user_defined => @digital_object.user_defined, :section_id => "digital_object_user_defined_"  } %>
+        <% if digital_object.user_defined %>
+          <%= render :partial => "user_defined/show", :locals => { :user_defined => digital_object.user_defined, :section_id => "digital_object_user_defined_"  } %>
         <% end %>
+      <% end %>
 
+      <%= readonly_context :digital_object, @digital_object do |readonly| %>
+        <% readonly.emit_template("digital_object", @digital_object) %>
       <% end %>
     </div>
   </div>
