--- a/frontend/app/views/events/_form.html.erb
+++ b/frontend/app/views/events/_form.html.erb
@@ -14,7 +14,7 @@
 <% form.emit_template("event") %>
 
 <section id="event_date">
-  <h3><%= I18n.t("event.date") %></h3>
+  <h3><%= I18n.t("event._frontend.section.date") %></h3>
   <%= form.label_and_select "chronotype_label", ['subrecord', 'timestamp'].map{|t| [I18n.t("event.chronotype.#{t}"), t]}, 'required' => true %>
   <div id="chronotype_timestamp" class="chronotype_form">
     <%= form.label_and_textfield "timestamp", :required => true %>
