--- a/frontend/app/views/events/_sidebar.html.erb
+++ b/frontend/app/views/events/_sidebar.html.erb
@@ -1,25 +1,12 @@
-<div id="archivesSpaceSidebar">
-  <ul class="nav nav-list as-nav-list">
-    <% if @exceptions %>
-      <li class="<% if @exceptions.has_key?(:errors)%>alert-error<% end %>">
-        <a href="#form_messages"><%= I18n.t("errors.sidebar_label") %>   <span class="icon-chevron-right"></span></a>
-      </li>
-    <% end %>
+<%= render(:layout => '/shared/sidebar',
+           :locals => {
+             :record_type => 'event',
+             :record => @event,
+             :plusone => true
+           }) do |sidebar| %>
 
-    <li><a href="#basic_information"><%= I18n.t("event._frontend.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#event_date"><%= I18n.t("event.date") %> <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#event_linked_agents_"><%= I18n.t("linked_agent._plural") %> <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#event_linked_records_"><%= I18n.t("linked_record._plural") %> <span class="icon-chevron-right"></span></a></li>
 
-    <% if controller.action_name != "show" %>
-      <li class="form-actions">
-        <div class="btn-group <% if ["new", "create"].include?(controller.action_name) %>btn-submit-group<% end %>">
-          <button type="submit" class="btn btn-primary"><%= I18n.t("event._frontend.action.save") %></button>
-          <% if ["new", "create"].include?(controller.action_name) %>
-            <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
-          <% end %>
-        </div>
-      </li>
-    <% end %>
-  </ul>
-</div>
+    <%= sidebar.render_for_view_and_edit(:subrecord_type => 'date', :property => 'date', :anchor => 'event_date') %>
+    <%= sidebar.render_for_view_and_edit(:subrecord_type => 'linked_agent', :property => 'linked_agents') %>
+    <%= sidebar.render_for_view_and_edit(:subrecord_type => 'linked_record', :property => 'linked_records') %>
+<% end %>
