--- a/frontend/app/views/shared/_sidebar_entry.html.erb
+++ b/frontend/app/views/shared/_sidebar_entry.html.erb
@@ -2,8 +2,8 @@
    if !defined?(anchor)
      anchor = (property == :none) ? subrecord_type : "#{record_type}_#{property}_"
    end
-   title = I18n.t("#{subrecord_type}._plural",
-                  :default => I18n.t("#{record_type}._frontend.section.#{subrecord_type}"))
+   title = I18n.t("#{record_type}._frontend.section.#{subrecord_type}",
+                  :default => I18n.t("#{subrecord_type}._plural"))
 %>
 
 <li><a href="#<%= anchor %>"><%= title %> <span class="icon-chevron-right"></span></a></li>
